Sorgente/.apex/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_gestionale__c</fullName>
        <label>Account gestionale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da creare</fullName>
                </value>
                <value>
                    <fullName>Creato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Manager_SR1__c</fullName>
        <label>Area Manager/SR</label>
        <relationshipName>gg</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Attivazione_email__c</fullName>
        <label>Email Sorgente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da attivare</fullName>
                    <default>true</default>
                    <label>Da attivare</label>
                </value>
                <value>
                    <fullName>Attivata</fullName>
                </value>
                <value>
                    <fullName>Chiusa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <label>Benefit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_aziendali__c</fullName>
        <label>Benefit aziendali</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nessuno</fullName>
                    <default>true</default>
                    <label>Nessuno</label>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Telefono + Sim</fullName>
                </value>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Tablet + Sim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cel_personale__c</fullName>
        <label>Cel personale</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chiusura_Gestionale__c</fullName>
        <label>Chiusura Gestionale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da chiudere</fullName>
                </value>
                <value>
                    <fullName>chiuso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chiusura_account_mail__c</fullName>
        <label>Chiusura account mail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da chiudere</fullName>
                </value>
                <value>
                    <fullName>Chiuso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_Fiscale__c</fullName>
        <label>Codice Fiscale</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_di_nascita__c</fullName>
        <label>Data di nascita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_fine_contratto__c</fullName>
        <label>Data fine contratto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_firma_contratto__c</fullName>
        <label>Data firma contratto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_invio_test_informativo__c</fullName>
        <label>Data invio test informativo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_start_contratto__c</fullName>
        <label>Data start contratto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decurtazioni_benefit_auto_ecc__c</fullName>
        <label>Decurtazioni (benefit, auto, ecc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disattivazione_account_Salesforce__c</fullName>
        <label>Disattivazione account Salesforce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da disattivare</fullName>
                </value>
                <value>
                    <fullName>Disattivato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_Mail_personale__c</fullName>
        <label>E-Mail personale</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Eliminazione_foto_dal_sito__c</fullName>
        <label>Eliminazione foto dal sito</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nulla da eliminare</fullName>
                </value>
                <value>
                    <fullName>Da eliminare</fullName>
                </value>
                <value>
                    <fullName>Eliminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Errori_test_informativo__c</fullName>
        <label>Errori test informativo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fisso_mensile__c</fullName>
        <label>Fisso mensile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>27</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_completo_per_le_comunicazioni__c</fullName>
        <label>Indirizzo completo per le comunicazioni</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_invio_materiali__c</fullName>
        <description>(se diverso da quello per le comunicazioni)</description>
        <label>Indirizzo invio materiali</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inviate_mail_di_start_up_Aurora__c</fullName>
        <label>Inviate mail di start up Aurora</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inviate_mail_di_start_up_Staminali__c</fullName>
        <label>Inviate mail di start up Staminali</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inviate_mail_di_start_up_amministrativa__c</fullName>
        <label>Inviate mail di start up amministrativa?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inviato_kit_di_emergenza__c</fullName>
        <label>Inviato kit di emergenza?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inviato_kit_dimostrativo__c</fullName>
        <label>Inviato kit dimostrativo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inviato_kit_start_up__c</fullName>
        <label>Inviato kit start up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inviato_storico_contratti_dalla_sua_prov__c</fullName>
        <label>Inviato storico contratti dalla sua prov</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invio_biglietti_da_visita__c</fullName>
        <label>Invio biglietti da visita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviati</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invio_etichette__c</fullName>
        <label>Invio etichette</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da inviare</fullName>
                </value>
                <value>
                    <fullName>Inviate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandato_se_agenzia__c</fullName>
        <label>Mandato (se agenzia)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monomandato</fullName>
                </value>
                <value>
                    <fullName>Plurimandato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mezzo_di_selezione_recruiting__c</fullName>
        <label>Mezzo di selezione recruiting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provincie_assegnate__c</fullName>
        <label>Provincie assegnate</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agrigento</fullName>
                </value>
                <value>
                    <fullName>Alessandria</fullName>
                </value>
                <value>
                    <fullName>Ancona</fullName>
                </value>
                <value>
                    <fullName>Aosta</fullName>
                </value>
                <value>
                    <fullName>Arezzo</fullName>
                </value>
                <value>
                    <fullName>Ascoli Piceno</fullName>
                </value>
                <value>
                    <fullName>Asti</fullName>
                </value>
                <value>
                    <fullName>Avellino</fullName>
                </value>
                <value>
                    <fullName>Bari</fullName>
                </value>
                <value>
                    <fullName>Barletta-Andria-Trani</fullName>
                </value>
                <value>
                    <fullName>Belluno</fullName>
                </value>
                <value>
                    <fullName>Benevento</fullName>
                </value>
                <value>
                    <fullName>Bergamo</fullName>
                </value>
                <value>
                    <fullName>Biella</fullName>
                </value>
                <value>
                    <fullName>Bologna</fullName>
                </value>
                <value>
                    <fullName>Bolzano</fullName>
                </value>
                <value>
                    <fullName>Brescia</fullName>
                </value>
                <value>
                    <fullName>Brindisi</fullName>
                </value>
                <value>
                    <fullName>Cagliari</fullName>
                </value>
                <value>
                    <fullName>Caltanissetta</fullName>
                </value>
                <value>
                    <fullName>Campobasso</fullName>
                </value>
                <value>
                    <fullName>Carbonia-Iglesias</fullName>
                </value>
                <value>
                    <fullName>Caserta</fullName>
                </value>
                <value>
                    <fullName>Catania</fullName>
                </value>
                <value>
                    <fullName>Catanzaro</fullName>
                </value>
                <value>
                    <fullName>Chieti</fullName>
                </value>
                <value>
                    <fullName>Como</fullName>
                </value>
                <value>
                    <fullName>Cosenza</fullName>
                </value>
                <value>
                    <fullName>Cremona</fullName>
                </value>
                <value>
                    <fullName>Crotone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provvigione_genetica__c</fullName>
        <label>Provvigione genetica</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provvigione_primo_contratto__c</fullName>
        <label>Provvigione primo contratto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>500 €</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provvigione_servizi_opzionali__c</fullName>
        <label>Provvigione servizi opzionali</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30€</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regime_fiscale_es_agevolato_oppure_ord__c</fullName>
        <label>Regime fiscale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordinario</fullName>
                </value>
                <value>
                    <fullName>Agevolato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regione__c</fullName>
        <label>Regione</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abruzzo</fullName>
                </value>
                <value>
                    <fullName>Basilicata</fullName>
                </value>
                <value>
                    <fullName>Calabria</fullName>
                </value>
                <value>
                    <fullName>Campania</fullName>
                </value>
                <value>
                    <fullName>Emilia-Romagna</fullName>
                </value>
                <value>
                    <fullName>Friuli-Venezia-Giulia</fullName>
                </value>
                <value>
                    <fullName>Lazio</fullName>
                </value>
                <value>
                    <fullName>Liguria</fullName>
                </value>
                <value>
                    <fullName>Lombardia</fullName>
                </value>
                <value>
                    <fullName>Marche</fullName>
                </value>
                <value>
                    <fullName>Molise</fullName>
                </value>
                <value>
                    <fullName>Piemonte</fullName>
                </value>
                <value>
                    <fullName>Puglia</fullName>
                </value>
                <value>
                    <fullName>Sardegna</fullName>
                </value>
                <value>
                    <fullName>Sicilia</fullName>
                </value>
                <value>
                    <fullName>Toscana</fullName>
                </value>
                <value>
                    <fullName>Trentino-Alto Adige</fullName>
                </value>
                <value>
                    <fullName>Umbria</fullName>
                </value>
                <value>
                    <fullName>Valle d&apos;Aosta</fullName>
                </value>
                <value>
                    <fullName>Veneto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ricezione_email_Sorgente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ricezione email Sorgente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ricezione_mail_chiusura_da_parte_di_SAM__c</fullName>
        <label>Ricezione mail chiusura da parte di SAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non ricevuta</fullName>
                </value>
                <value>
                    <fullName>Ricevuta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ruolo_offerto__c</fullName>
        <label>Ruolo offerto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Area Manager</fullName>
                </value>
                <value>
                    <fullName>SN</fullName>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saldare_provvigioni__c</fullName>
        <label>Saldare provvigioni</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da saldare</fullName>
                </value>
                <value>
                    <fullName>Saldate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scadenza_fisso_mensile__c</fullName>
        <label>Scadenza fisso mensile</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Somma_di_start_up_una_tantum__c</fullName>
        <label>Somma di start-up una tantum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telefono_aziendale__c</fullName>
        <label>Telefono aziendale</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_contratto_offerto__c</fullName>
        <label>Tipo contratto offerto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agenzia</fullName>
                </value>
                <value>
                    <fullName>Consulenza</fullName>
                </value>
                <value>
                    <fullName>Prestazione occasionale</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Dipendente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visite_minime_per_fisso__c</fullName>
        <label>Visite minime per fisso</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>data_ricezione_materiale_identity__c</fullName>
        <label>data ricezione materiale identity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>importo_a_visita__c</fullName>
        <label>Importo a visita</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>n_Partita_IVA_se_titolare_di_p_IVA__c</fullName>
        <label>n° Partita IVA se titolare di p.IVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>organizzazione_ritiro_materiale__c</fullName>
        <label>organizzazione ritiro materiale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da organizzare</fullName>
                </value>
                <value>
                    <fullName>In attesa ricezione</fullName>
                </value>
                <value>
                    <fullName>Ritirato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provvigione_variabile_a_contratto__c</fullName>
        <label>provvigione variabile a contratto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>300 €</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ricezione_dispositivi_mobile__c</fullName>
        <label>ricezione dispositivi mobile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non assegnato</fullName>
                </value>
                <value>
                    <fullName>In attesa ricezione</fullName>
                </value>
                <value>
                    <fullName>Ricevuto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>Area_Manager_SR1__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>FORCE</value>
        </filters>
        <label>Utenti attivi</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Utenti amministratore</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tutti gli utenti</label>
    </listViews>
    <listViews>
        <fullName>Force_com_App_Subscription_User_KAM</fullName>
        <columns>FULL_NAME</columns>
        <columns>Area_Manager_SR1__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Force.com - App Subscription User (KAM)</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Agenti attivi</label>
    </listViews>
    <listViews>
        <fullName>Lista_agenti_destinatari_email_ufficio</fullName>
        <columns>FULL_NAME</columns>
        <columns>Ricezione_email_Sorgente__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Ricezione_email_Sorgente__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Lista agenti destinatari email ufficio</label>
    </listViews>
    <listViews>
        <fullName>Rete_vendita</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Kam,Ram</value>
        </filters>
        <label>Rete vendita</label>
        <sharedTo>
            <role>CBU</role>
            <role>CEO</role>
            <role>Responsabile_Postvendita</role>
            <role>Responsabile_Postvendita_Prevendita</role>
            <role>Responsabile_Prevendita</role>
            <role>SAM</role>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>